# pygnss_rt

./: .gitignore  README.md  pyproject.toml
callers/: crontab.example  pygnss_cron.sh
config/: ftp_servers.yaml  settings.example.yaml
docs/: .gitignore  pygnss_rt_technical_design.tex
pygnss_rt/: __init__.py  cli.py  cron_hourly.py
pygnss_rt/atmosphere/: __init__.py  inx2tec.py  ztd2iwv.py
pygnss_rt/bsw/: __init__.py  bpe_runner.py  environment.py  interface.py  parsers.py  rnx2snx.py
pygnss_rt/bsw_configs/: convert_xml_to_yaml.py  iGNSS_D_PPP_AR_EU_IGS54_direct.yaml  iGNSS_D_PPP_AR_GB_IGS54_direct.yaml  iGNSS_D_PPP_AR_IG_IGS54_direct.yaml  iGNSS_D_PPP_AR_RG_IGS54_direct.yaml  iGNSS_D_PPP_AR_SS_IGS54_direct.yaml  iGNSS_NRDDP_TRO_BSW54_direct.yaml
pygnss_rt/config/: __init__.py  ftp_servers.yaml
pygnss_rt/core/: __init__.py  config.py  exceptions.py  orchestrator.py  paths.py
pygnss_rt/data_access/: __init__.py  download_callers.py  downloader.py  ftp_client.py  ftp_config.py  gen_files_downloader.py  http_client.py  met_downloader.py  product_downloader.py  station_downloader.py
pygnss_rt/database/: __init__.py  connection.py  daily_data.py  hourly_data.py  maintenance.py  met.py  models.py  products.py  subhourly_met.py
pygnss_rt/processing/: __init__.py  bsw_options.py  campaign_archival.py  daily_crd.py  daily_ppp.py  neq_stacking.py  networks.py  nrddp_tro.py  nrt_coordinates.py  orchestrator.py  orchestrator_main.py  station_merger.py
pygnss_rt/products/: __init__.py  orbit.py
pygnss_rt/station_data/: IGS20_54.ABB  IGS20_54.BLQ  IGS20_54.CRD  NEWNRT52.ABB  NEWNRT52.BLQ  NEWNRT52.CRD  NEWNRT54.CRD  NEWNRT54.STA  OBSSEL.SEL  SESSIONS.SES  SINEX.SKL  SINEX_PPP.SKL
pygnss_rt/stations/: __init__.py  auto_station.py  bswsta.py  coordinates.py  file_writers.py  site_log_downloader.py  site_log_parser.py  sta_file_writer.py  station.py  station_info.py
pygnss_rt/utils/: __init__.py  compression.py  dates.py  format.py  logging.py  monitoring.py  (+4 more)
tests/: __init__.py  test_bsw_options.py  test_dates.py  test_neq_stacking.py  test_networks.py  test_nrddp_tro.py  test_product_downloader.py
(+2 files in other folders)
