[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygnss-rt"
version = "1.3.0"
description = "Python GNSS Real-Time Processing System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PyGNSS-RT Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = ["GNSS", "GPS", "troposphere", "ZTD", "IWV", "PPP", "real-time"]

dependencies = [
    "duckdb>=1.0.0",
    "pyyaml>=6.0",
    "paramiko>=3.0.0",
    "astropy>=6.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
    "structlog>=24.0.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
pygnss-rt = "pygnss_rt.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pygnss-rt"
Documentation = "https://github.com/yourusername/pygnss-rt#readme"
Repository = "https://github.com/yourusername/pygnss-rt"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygnss_rt*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pygnss_rt --cov-report=term-missing"
